# chess-board

./: README.md  chess_board.ipynb  pyproject.toml
.ipynb_checkpoints/: chess_board-checkpoint.ipynb  vg-stats-checkpoint.ipynb  viz-b-checkpoint.ipynb
