[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["rand alsallaq <randalsallaq97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
matplot = "^0.1.9"
lib = "^3.0.0"
jupyterlab = "^2.2.9"
jupyter = "^1.0.0"
lab = "^6.2"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
